# Drone-Simulation-with-ROS2-and-PX4

./: 4050_gz_x500_frame_fpv_drone  README.md
Drone_Task/: Ankle.SLDPRT  Arm Mount.SLDPRT  Arm.SLDPRT  Bar.SLDPRT  Bottom Board.SLDPRT  CPU Mount.SLDPRT  Foam.SLDPRT  Foot Cap.SLDPRT  Foot.SLDPRT  Hanger.SLDPRT  Holybro Motor.SLDASM  Holybro Motor.SLDPRT  Leg Mount.SLDPRT  Leg.SLDPRT  Motor Mount (1) (1).SLDPRT  Motor Mount Body.SLDPRT  Motor Mount Plate.SLDPRT  Propeller.SLDPRT  Top Board.SLDPRT  X500 Frame_fpv_drone.SLDASM
drone_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
drone_ws/install/x500_frame_fpv_drone/share/x500_frame_fpv_drone/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
drone_ws/install/x500_frame_fpv_drone/share/x500_frame_fpv_drone/cmake/: x500_frame_fpv_droneConfig.cmake
drone_ws/install/x500_frame_fpv_drone/share/x500_frame_fpv_drone/launch/: display.launch.py  (+1 more)
drone_ws/log/: latest_build
drone_ws/src/x500_frame_fpv_drone/: CMakeLists.txt
drone_ws/src/x500_frame_fpv_drone/launch/: gazebo.launch.py
drone_ws/src/x500_frame_fpv_drone/meshes/: prop_link_4.STL
px4_ros2_ws/src/px4_bringup/: package.xml  setup.py
px4_ros2_ws/src/px4_bringup/launch/: x500.launch.py
px4_ros2_ws/src/px4_offboard/: setup.py
px4_ros2_ws/src/px4_offboard/launch/: keyboard_teleop.launch.py
px4_ros2_ws/src/px4_offboard/px4_offboard/: teleop_keyboard.py  velocity_offboard_control.py
x500_frame_fpv_drone/: model.config  model.sdf
x500_frame_fpv_drone/meshes/: prop_link_2.STL
(+5 files in other folders)
